--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,21 @@
         <div class="min-w-80 max-w-80 h-96 pt-2 backdrop-blur-sm bg-gray-900/30 rounded-xl shadow-md lg:h-[400px] transition-all ease-in-out duration-500 hover:-translate-y-10 hover:shadow-green-400 hover:backdrop-hue-rotate-180">  
           <img class="mx-auto w-[288px] h-[288px] rounded-lg" id="img-random">
           <div class="ml-5 mt-5 text-white font-semibold">
-            <h2 class="text-teal-400">Nombre: <span class="text-white font-normal" id="name">Rick Sanchez</span></h2>
+            <h2 class="text-teal-400">Name: <span class="text-white font-normal" id="name"></span></h2>
             <h3 class="text-green-400">Status: <span class="text-white font-normal" id="status"></span></h3>
           </div>
         </div>
         <div class="hidden min-w-80 max-w-80 h-96 pt-2 backdrop-blur-sm bg-gray-900/30 rounded-xl shadow-md md:block lg:block lg:h-[400px] transition-all ease-in-out duration-500 hover:-translate-y-10 hover:shadow-green-400 hover:backdrop-hue-rotate-180">  
           <img class="mx-auto w-[288px] h-[288px] rounded-lg" id="img-random2">
           <div class="ml-5 mt-5 text-white font-semibold">
-            <h2 class="text-teal-400">Nombre: <span class="text-white font-normal" id="name2"></span></h2>
+            <h2 class="text-teal-400">Name: <span class="text-white font-normal" id="name2"></span></h2>
             <h3 class="text-green-400">Status: <span class="text-white font-normal" id="status2"></span></h3>
           </div>
         </div>
         <div class="hidden min-w-80 max-w-80 h-96 pt-2 backdrop-blur-sm bg-gray-900/30 rounded-xl shadow-md lg:block lg:h-[400px] transition-all ease-in-out duration-500 hover:-translate-y-10 hover:shadow-green-400 hover:backdrop-hue-rotate-180">  
           <img class="mx-auto w-[288px] h-[288px] rounded-lg" id="img-random3">
           <div class="ml-5 mt-5 text-white font-semibold">
-            <h2 class="text-teal-400">Nombre: <span class="text-white font-normal" id="name3"></span></h2>
+            <h2 class="text-teal-400">Name: <span class="text-white font-normal" id="name3"></span></h2>
             <h3 class="text-green-400">Status: <span class="text-white font-normal" id="status3"></span></h3>
           </div>
         </div>
